--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,76 +2,96 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.example.project_myfit.ui.main.listfragment.LockableScrollView
-        android:id="@+id/main_scroll_view"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fillViewport="true">
+        android:layout_height="match_parent">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <com.example.project_myfit.ui.main.listfragment.LockableScrollView
+            android:id="@+id/main_scroll_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:fillViewport="true">
 
-            <com.google.android.material.textview.MaterialTextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_12sdp"
-                android:layout_marginTop="@dimen/_8sdp"
-                android:text="@string/category"
-                android:textSize="@dimen/_16sdp"
-                android:textStyle="bold"
-                app:fontFamily="@font/noto_black" />
-
-            <com.google.android.material.button.MaterialButtonToggleGroup
-                android:id="@+id/toggle_group"
+            <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                app:selectionRequired="true"
-                app:singleSelection="true">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_top"
-                    style="?materialButtonOutlinedStyle"
-                    android:layout_width="@dimen/_72sdp"
-                    android:layout_height="@dimen/_36sdp"
-                    android:text="@string/top"
-                    android:textSize="@dimen/_9sdp"
-                    app:rippleColor="@android:color/transparent" />
+                <com.google.android.material.textview.MaterialTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_12sdp"
+                    android:layout_marginTop="@dimen/_8sdp"
+                    android:text="@string/category"
+                    android:textSize="@dimen/_16sdp"
+                    android:textStyle="bold"
+                    app:fontFamily="@font/noto_black" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_bottom"
-                    style="?materialButtonOutlinedStyle"
-                    android:layout_width="@dimen/_72sdp"
-                    android:layout_height="@dimen/_36sdp"
-                    android:text="@string/bottom"
-                    android:textSize="@dimen/_9sdp"
-                    app:rippleColor="@android:color/transparent" />
+                <com.google.android.material.button.MaterialButtonToggleGroup
+                    android:id="@+id/toggle_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    app:selectionRequired="true"
+                    app:singleSelection="true">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_outer"
-                    style="?materialButtonOutlinedStyle"
-                    android:layout_width="@dimen/_72sdp"
-                    android:layout_height="@dimen/_36sdp"
-                    android:text="@string/outer"
-                    android:textSize="@dimen/_9sdp"
-                    app:rippleColor="@android:color/transparent" />
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_top"
+                        style="?materialButtonOutlinedStyle"
+                        android:layout_width="@dimen/_72sdp"
+                        android:layout_height="@dimen/_36sdp"
+                        android:text="@string/top"
+                        android:textSize="@dimen/_9sdp"
+                        app:rippleColor="@android:color/transparent" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btn_etc"
-                    style="?materialButtonOutlinedStyle"
-                    android:layout_width="@dimen/_72sdp"
-                    android:layout_height="@dimen/_36sdp"
-                    android:text="@string/etc"
-                    android:textSize="@dimen/_9sdp"
-                    app:rippleColor="@android:color/transparent" />
-            </com.google.android.material.button.MaterialButtonToggleGroup>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_bottom"
+                        style="?materialButtonOutlinedStyle"
+                        android:layout_width="@dimen/_72sdp"
+                        android:layout_height="@dimen/_36sdp"
+                        android:text="@string/bottom"
+                        android:textSize="@dimen/_9sdp"
+                        app:rippleColor="@android:color/transparent" />
 
-            <androidx.viewpager2.widget.ViewPager2
-                android:id="@+id/view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
-    </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_outer"
+                        style="?materialButtonOutlinedStyle"
+                        android:layout_width="@dimen/_72sdp"
+                        android:layout_height="@dimen/_36sdp"
+                        android:text="@string/outer"
+                        android:textSize="@dimen/_9sdp"
+                        app:rippleColor="@android:color/transparent" />
+
+                    <com.google.android.material.button.MaterialButton
+                        android:id="@+id/btn_etc"
+                        style="?materialButtonOutlinedStyle"
+                        android:layout_width="@dimen/_72sdp"
+                        android:layout_height="@dimen/_36sdp"
+                        android:text="@string/etc"
+                        android:textSize="@dimen/_9sdp"
+                        app:rippleColor="@android:color/transparent" />
+                </com.google.android.material.button.MaterialButtonToggleGroup>
+
+                <androidx.viewpager2.widget.ViewPager2
+                    android:id="@+id/view_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+        </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/list_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_marginEnd="@dimen/_16sdp"
+            android:layout_marginBottom="@dimen/_44sdp"
+            android:contentDescription="@string/floating_action_button"
+            android:src="@drawable/icon_arrow_up"
+            android:visibility="gone"
+            app:backgroundTint="@color/white"
+            app:fabCustomSize="@dimen/_24sdp"
+            app:fabSize="mini" />
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
