--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -137,7 +137,7 @@
             android:layout_marginBottom="@dimen/_44sdp"
             android:contentDescription="@string/floating_action_button"
             android:src="@drawable/icon_arrow_up"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:backgroundTint="@color/white"
             app:fabCustomSize="@dimen/_24sdp"
             app:fabSize="mini" />
