--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -81,7 +81,7 @@
         </com.example.project_myfit.ui.main.listfragment.LockableScrollView>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/list_fab"
+            android:id="@+id/main_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
@@ -89,7 +89,7 @@
             android:layout_marginBottom="@dimen/_44sdp"
             android:contentDescription="@string/floating_action_button"
             android:src="@drawable/icon_arrow_up"
-            android:visibility="gone"
+            android:visibility="invisible"
             app:backgroundTint="@color/white"
             app:fabCustomSize="@dimen/_24sdp"
             app:fabSize="mini" />
