--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -97,6 +97,7 @@
             android:contentDescription="@string/floating_action_button"
             android:src="@drawable/icon_arrow_up"
             app:backgroundTint="@color/white"
+            android:visibility="invisible"
             app:fabSize="mini" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
