--- a/app/src/main/res/layout/item_search_folder.xml
+++ b/app/src/main/res/layout/item_search_folder.xml
@@ -16,7 +16,7 @@
 
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/_32sdp"
             android:layout_marginHorizontal="@dimen/_12sdp"
             android:layout_marginVertical="@dimen/_2sdp"
             app:cardBackgroundColor="?myCardViewBackground"
@@ -24,6 +24,7 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
+                android:gravity="center_vertical"
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -36,14 +37,32 @@
                     tools:src="@drawable/icon_folder" />
 
                 <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
+                    android:layout_weight="1"
                     android:layout_marginStart="@dimen/_8sdp"
                     android:alpha="0.8"
+                    android:ellipsize="end"
                     android:gravity="center_vertical"
                     android:text="@{folder.folderName}"
                     android:textSize="@dimen/_11sdp"
+                    android:includeFontPadding="true"
+                    android:maxLines="1"
                     tools:text="폴더당" />
+
+                <com.google.android.material.checkbox.MaterialCheckBox
+                    android:id="@+id/search_folder_check_box"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="@dimen/_4sdp"
+                    android:alpha="0.8"
+                    android:buttonTint="?colorControlNormal"
+                    android:clickable="false"
+                    android:enabled="false"
+                    android:scaleX="0.8"
+                    android:scaleY="0.8"
+                    android:visibility="gone" />
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
     </FrameLayout>
