--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,11 +16,11 @@
         <item name="colorOnError">#000000</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#FF282828</item>
+        <item name="android:statusBarColor" tools:targetApi="l">#000000</item>
 
         <!-- Customize your theme here. -->
         <!--        phone navigation bar color-->
-        <item name="android:navigationBarColor">#FF2D2D2D</item>
+        <item name="android:navigationBarColor">#000000</item>
         <!--        menu color-->
         <item name="android:textColorSecondary">@android:color/white</item>
         <!--        text color-->
@@ -44,6 +44,7 @@
         <!--        menu icon padding-->
         <item name="actionButtonStyle">@style/myMenuPadding</item>
         <item name="android:includeFontPadding">false</item>
+        <item name="myCardViewBackground">#FF080808</item>
     </style>
     <!--    bottom navigation active color-->
     <style name="myBottomNav" parent="Theme.MaterialComponents.DayNight.NoActionBar">
