--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -64,31 +64,48 @@
 
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingHorizontal="@dimen/_4sdp"
-                    android:paddingVertical="@dimen/_2sdp">
+                    android:layout_height="wrap_content">
 
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:alpha="0.7"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@{size.brand}"
-                        android:textSize="@dimen/_7sdp"
-                        tools:text="앤더슨벨" />
-
-                    <com.google.android.material.textview.MaterialTextView
-                        android:layout_width="match_parent"
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="-2dp"
-                        android:alpha="0.8"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:text="@{size.name}"
-                        android:textSize="@dimen/_10sdp"
-                        tools:text="오버핏 반팔" />
+                        android:layout_weight="1"
+                        android:orientation="vertical"
+                        android:paddingHorizontal="@dimen/_4sdp"
+                        android:paddingVertical="@dimen/_2sdp">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:alpha="0.7"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="@{size.brand}"
+                            android:textSize="@dimen/_7sdp"
+                            tools:text="앤더슨벨" />
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-2dp"
+                            android:alpha="0.8"
+                            android:ellipsize="end"
+                            android:maxLines="1"
+                            android:text="@{size.name}"
+                            android:textSize="@dimen/_10sdp"
+                            tools:text="오버핏 반팔" />
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+
+                    <com.google.android.material.checkbox.MaterialCheckBox
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_gravity="bottom"
+                        android:button="@drawable/check_box_heart"
+                        android:checked="@{size.favorite}"
+                        android:clickable="false"
+                        android:scaleX="0.7"
+                        android:scaleY="0.7" />
+
                 </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </com.google.android.material.card.MaterialCardView>
