하트 체크박스 리플 컬러 삭제

--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -103,6 +103,7 @@
                         android:layout_height="match_parent"
                         android:layout_gravity="bottom"
                         android:button="@drawable/check_box_heart"
+                        android:background="@android:color/transparent"
                         android:checked="@={size.favorite}"
                         android:scaleX="0.8"
                         android:scaleY="0.8" />
