--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,20 +50,22 @@
                 app:elevation="@dimen/_6sdp"
                 app:fabAlignmentMode="center"
                 app:backgroundTint="?colorPrimary"
-                app:fabCradleMargin="@dimen/_6sdp" />
+                app:contentInsetStart="0dp"
+                app:fabCradleMargin="@dimen/_6sdp">
 
-            <com.google.android.material.bottomnavigation.BottomNavigationView
-                android:id="@+id/bottom_nav"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/_36sdp"
-                android:layout_gravity="bottom"
-                android:background="@android:color/transparent"
-                android:theme="@style/myBottomNav"
-                app:elevation="0dp"
-                app:itemIconSize="@dimen/_22sdp"
-                app:itemRippleColor="@android:color/transparent"
-                app:labelVisibilityMode="unlabeled"
-                app:menu="@menu/bottom_nav_menu" />
+                <com.google.android.material.bottomnavigation.BottomNavigationView
+                    android:id="@+id/bottom_nav"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_36sdp"
+                    android:layout_gravity="bottom"
+                    android:background="@android:color/transparent"
+                    android:theme="@style/myBottomNav"
+                    app:elevation="0dp"
+                    app:itemIconSize="@dimen/_22sdp"
+                    app:itemRippleColor="@android:color/transparent"
+                    app:labelVisibilityMode="unlabeled"
+                    app:menu="@menu/bottom_nav_menu" />
+            </com.google.android.material.bottomappbar.BottomAppBar>
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/activity_fab"
