--- a/app/src/main/res/layout/item_list_recycler_folder.xml
+++ b/app/src/main/res/layout/item_list_recycler_folder.xml
@@ -25,6 +25,7 @@
             app:cardElevation="@dimen/_4sdp">
 
             <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/folder_name_text"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:ellipsize="end"
