브랜드, 이름 트림

--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -76,23 +76,25 @@
                         android:paddingVertical="@dimen/_2sdp">
 
                         <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/grid_brand_text"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:alpha="0.7"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:text="@{size.brand}"
+                            android:text="@{size.brand.trim()}"
                             android:textSize="@dimen/_7sdp"
                             tools:text="앤더슨벨" />
 
                         <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/grid_name_text"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="-2dp"
                             android:alpha="0.8"
                             android:ellipsize="end"
                             android:maxLines="1"
-                            android:text="@{size.name}"
+                            android:text="@{size.name.trim()}"
                             android:textSize="@dimen/_10sdp"
                             tools:text="오버핏 반팔" />
                     </androidx.appcompat.widget.LinearLayoutCompat>
