--- a/app/src/main/res/layout/item_search_folder.xml
+++ b/app/src/main/res/layout/item_search_folder.xml
@@ -24,7 +24,6 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:gravity="center_vertical"
                 android:layout_height="wrap_content">
 
                 <androidx.appcompat.widget.AppCompatImageView
@@ -36,19 +35,42 @@
                     android:alpha="0.8"
                     tools:src="@drawable/icon_folder" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:layout_marginStart="@dimen/_8sdp"
-                    android:alpha="0.8"
-                    android:ellipsize="end"
-                    android:gravity="center_vertical"
-                    android:text="@{folder.folderName}"
-                    android:textSize="@dimen/_11sdp"
-                    android:includeFontPadding="true"
-                    android:maxLines="1"
-                    tools:text="폴더당" />
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent">
+
+                    <com.google.android.material.textview.MaterialTextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_marginStart="@dimen/_8sdp"
+                        android:alpha="0.8"
+                        android:ellipsize="end"
+                        android:gravity="center_vertical"
+                        android:maxWidth="@dimen/_220sdp"
+                        android:maxLines="1"
+                        android:text="@{folder.folderName}"
+                        android:textSize="@dimen/_11sdp"
+                        tools:text="폴더당" />
+
+                    <FrameLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginStart="@dimen/_4sdp"
+                        android:layout_marginTop="@dimen/_1sdp"
+                        android:background="@drawable/item_amount_background"
+                        android:paddingHorizontal="@dimen/_6sdp"
+                        android:paddingBottom="@dimen/_1sdp">
+
+                        <com.google.android.material.textview.MaterialTextView
+                            android:id="@+id/search_item_amount"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:alpha="0.6"
+                            android:textSize="@dimen/_8sdp"
+                            tools:text="12" />
+                    </FrameLayout>
+                </androidx.appcompat.widget.LinearLayoutCompat>
 
                 <com.google.android.material.checkbox.MaterialCheckBox
                     android:id="@+id/search_folder_check_box"
