--- a/app/src/main/res/drawable/icon_grid.xml
+++ b/app/src/main/res/drawable/icon_grid.xml
@@ -1,19 +1,25 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="20dp"
-    android:height="20dp"
+    android:width="24dp"
+    android:height="24dp"
     android:tint="?colorControlNormal"
-    android:viewportWidth="271.673"
-    android:viewportHeight="271.673">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M114.939,0H10.449C4.678,0 0,4.678 0,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449V10.449C125.388,4.678 120.71,0 114.939,0z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M261.224,0h-104.49c-5.771,0 -10.449,4.678 -10.449,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449V10.449C271.673,4.678 266.995,0 261.224,0z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M114.939,146.286H10.449C4.678,146.286 0,150.964 0,156.735v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449v-104.49C125.388,150.964 120.71,146.286 114.939,146.286z" />
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M261.224,146.286h-104.49c-5.771,0 -10.449,4.678 -10.449,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449v-104.49C271.673,150.964 266.995,146.286 261.224,146.286z" />
+    android:viewportWidth="272"
+    android:viewportHeight="272">
+    <group
+        android:pivotX="136"
+        android:pivotY="136"
+        android:scaleX="0.8"
+        android:scaleY="0.8">
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M114.939,0H10.449C4.678,0 0,4.678 0,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449V10.449C125.388,4.678 120.71,0 114.939,0z" />
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M261.224,0h-104.49c-5.771,0 -10.449,4.678 -10.449,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449V10.449C271.673,4.678 266.995,0 261.224,0z" />
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M114.939,146.286H10.449C4.678,146.286 0,150.964 0,156.735v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449v-104.49C125.388,150.964 120.71,146.286 114.939,146.286z" />
+        <path
+            android:fillColor="#FF000000"
+            android:pathData="M261.224,146.286h-104.49c-5.771,0 -10.449,4.678 -10.449,10.449v104.49c0,5.771 4.678,10.449 10.449,10.449h104.49c5.771,0 10.449,-4.678 10.449,-10.449v-104.49C271.673,150.964 266.995,146.286 261.224,146.286z" />
+    </group>
 </vector>
