에드아이콘 바인드 변경

--- a/app/src/main/res/layout/item_list_recycler_grid.xml
+++ b/app/src/main/res/layout/item_list_recycler_grid.xml
@@ -43,7 +43,7 @@
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/add_image_icon"
-                        setAddIcon="@{size.size}"
+                        setAddIcon="@{size.imageUri}"
                         android:layout_width="@dimen/_40sdp"
                         android:layout_height="@dimen/_40sdp"
                         android:layout_gravity="center"
